[gd_scene load_steps=36 format=2]

[ext_resource path="res://Assets/Levels/backgrounds/Background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/GuiFont/HackbotFont_sub_header_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/GUI/poo_animation/frame_04_delay-0.2s.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/poo_animation/frame_18_delay-0.2s.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/poo_animation/frame_00_delay-0.2s.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI/poo_animation/frame_08_delay-0.2s.png" type="Texture" id=6]
[ext_resource path="res://Assets/GUI/poo_animation/frame_03_delay-0.2s.png" type="Texture" id=7]
[ext_resource path="res://Assets/GUI/poo_animation/frame_17_delay-0.2s.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/poo_animation/frame_05_delay-0.2s.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/poo_animation/frame_09_delay-0.2s.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/poo_animation/frame_02_delay-0.2s.png" type="Texture" id=11]
[ext_resource path="res://Assets/GUI/poo_animation/frame_01_delay-0.2s.png" type="Texture" id=12]
[ext_resource path="res://Assets/GUI/poo_animation/frame_19_delay-0.2s.png" type="Texture" id=13]
[ext_resource path="res://Assets/GUI/poo_animation/frame_15_delay-0.2s.png" type="Texture" id=14]
[ext_resource path="res://Assets/GUI/poo_animation/frame_12_delay-0.2s.png" type="Texture" id=15]
[ext_resource path="res://Assets/GUI/poo_animation/frame_11_delay-0.2s.png" type="Texture" id=16]
[ext_resource path="res://Assets/GUI/poo_animation/frame_13_delay-0.2s.png" type="Texture" id=17]
[ext_resource path="res://Assets/GUI/poo_animation/frame_10_delay-0.2s.png" type="Texture" id=18]
[ext_resource path="res://Assets/GUI/poo_animation/frame_14_delay-0.2s.png" type="Texture" id=19]
[ext_resource path="res://Assets/GUI/poo_animation/frame_06_delay-0.2s.png" type="Texture" id=20]
[ext_resource path="res://Assets/GUI/poo_animation/frame_07_delay-0.2s.png" type="Texture" id=21]
[ext_resource path="res://Assets/GUI/poo_animation/frame_16_delay-0.2s.png" type="Texture" id=22]
[ext_resource path="res://Assets/GUI/watermelon_animation/food_watermelon_0.png" type="Texture" id=23]
[ext_resource path="res://Scenes/GUI/QuitButton.tscn" type="PackedScene" id=24]
[ext_resource path="res://Assets/GUI/joypad_animation/nes_icon_1.png" type="Texture" id=25]
[ext_resource path="res://Assets/GUI/joypad_animation/nes_icon_2.png" type="Texture" id=26]
[ext_resource path="res://Assets/GUI/watermelon_animation/food_watermelon_1.png" type="Texture" id=27]
[ext_resource path="res://Assets/GUI/joypad_animation/nes_icon_3.png" type="Texture" id=28]
[ext_resource path="res://Assets/GUI/joypad_animation/nes_icon_0.png" type="Texture" id=29]
[ext_resource path="res://Assets/GUI/joypad_animation/nes_icon_5.png" type="Texture" id=30]
[ext_resource path="res://Assets/GUI/joypad_animation/nes_icon_4.png" type="Texture" id=31]
[ext_resource path="res://Scenes/GUI/MainScreen.gd" type="Script" id=37]

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 20
frame_0/texture = ExtResource( 5 )
frame_1/texture = ExtResource( 12 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 11 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 7 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 3 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 9 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 20 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 21 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 6 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 10 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 18 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 16 )
frame_11/delay_sec = 0.0
frame_12/texture = ExtResource( 15 )
frame_12/delay_sec = 0.0
frame_13/texture = ExtResource( 17 )
frame_13/delay_sec = 0.0
frame_14/texture = ExtResource( 19 )
frame_14/delay_sec = 0.0
frame_15/texture = ExtResource( 14 )
frame_15/delay_sec = 0.0
frame_16/texture = ExtResource( 22 )
frame_16/delay_sec = 0.0
frame_17/texture = ExtResource( 8 )
frame_17/delay_sec = 0.0
frame_18/texture = ExtResource( 4 )
frame_18/delay_sec = 0.0
frame_19/texture = ExtResource( 13 )
frame_19/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=3]
flags = 4
frames = 2
frame_0/texture = ExtResource( 23 )
frame_1/texture = ExtResource( 27 )
frame_1/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=4]
flags = 4
frames = 6
frame_0/texture = ExtResource( 29 )
frame_1/texture = ExtResource( 25 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 26 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 28 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 31 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 30 )
frame_5/delay_sec = 0.0

[node name="MainScreen" type="Control" groups=["gui_main_screen"]]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 37 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.823529, 0.639216, 0.639216, 0.352941 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 462.0
margin_top = 201.0
margin_right = 1458.0
margin_bottom = 879.0

[node name="LoadGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 996.0
margin_bottom = 160.0
focus_neighbour_bottom = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")
custom_fonts/font = ExtResource( 2 )
text = "Load Game"
icon = SubResource( 2 )
flat = true

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 996.0
margin_bottom = 314.0
focus_neighbour_top = NodePath("../LoadGameButton")
focus_neighbour_bottom = NodePath("../InputButton")
focus_next = NodePath("../InputButton")
focus_previous = NodePath("../LoadGameButton")
custom_fonts/font = ExtResource( 2 )
text = " New Game"
icon = SubResource( 3 )
flat = true

[node name="InputButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 24 )]
margin_top = 318.0
margin_right = 996.0
margin_bottom = 524.0
focus_neighbour_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../NewGameButton")
custom_fonts/font = ExtResource( 2 )
text = "Input"
icon = SubResource( 4 )

[node name="QuitButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 24 )]
margin_top = 528.0
margin_right = 996.0
margin_bottom = 678.0
focus_neighbour_top = NodePath("../InputButton")
focus_neighbour_bottom = NodePath("../LoadGameButton")
focus_next = NodePath("../LoadGameButton")
focus_previous = NodePath("../InputButton")
custom_fonts/font = ExtResource( 2 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/InputButton" to="." method="_on_InputButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
